--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,10 @@
     <body style="background-color: rgb(221, 218, 218);">
         <p> <u>Menu</u></p>
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Our Projects</a></li>
-            <li><a href="contacts.html">Contact us</a></li>
+            <li><a href="support/home.html">Home</a></li>
+            <li><a href="support/about.html">About</a></li>
+            <li><a href="support/projects.html">Our Projects</a></li>
+            <li><a href="support/contacts.html">Contact us</a></li>
             
           </ul>
           
